# BDT

./: .gitignore  01_load_raw_data.py  02_clean_data.py  03_create_aggregations.py  README.md  agg_daily.parquet  agg_sector.parquet  agg_ticker.parquet  agg_weekly.parquet  app.py  cleaned.parquet  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Stock_Market_Analysis/: .gitignore  03_create_aggregations.py  agg_exchange.parquet  app.py  requirements.txt
Stock_Market_Analysis/aggregations/: agg_daily.parquet  agg_notes.parquet  agg_sector.parquet  agg_ticker.parquet  agg_weekly.parquet
