[project]
name = "stock-market-streamlit"
version = "0.1.0"
description = "Stock Market Analysis - Streamlit dashboard (UV-based)"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
   "streamlit",
   "pandas",
   "numpy>=1.26,<2.0",
   "pyarrow",
   "altair"
]

[tool.uv]
# no dev-dependencies here; add if you want test tools
dev-dependencies = []
